# asteroids_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_linux.sh  build_mac.sh  flake.nix
.github/workflows/: cmake-multi-platform.yml
asteroid/: Global.h  Makefile  asteroid.pri  asteroid.pro  asteroid.qrc  asteroid.sln  asteroid.vcxproj  asteroid.vcxproj.filters  asteroid_windows.pro  main.cpp
mvc/controller/: CommandCenter.cpp  CommandCenter.h  Game.cpp  Game.h  GameOp.cpp  GameOp.h  GameOpsQueue.cpp  GameOpsQueue.h  Sound.cpp  Sound.h  SoundRunnable.h  Utils.cpp  Utils.h  assetsloader.cpp  assetsloader.h
mvc/model/: Asteroid.cpp  Asteroid.h  Brick.cpp  Brick.h  Bullet.cpp  Bullet.h  Falcon.cpp  Falcon.h  Floater.cpp  Floater.h  Movable.cpp  Movable.h  NewWallFloater.cpp  NewWallFloater.h  Nuke.cpp  Nuke.h  NukeFloater.cpp  NukeFloater.h  PolarPoint.cpp  PolarPoint.h  ShieldFloater.cpp  ShieldFloater.h  ShieldFloater.java  Sprite.cpp  Sprite.h  Star.cpp  Star.h  WhiteCloudDebris.cpp  WhiteCloudDebris.h  collisions.cpp  collisions.h  minimap.cpp  minimap.h  nuke.cpp  whiteclouddebris.cpp
mvc/view/: GameFrame.cpp  GameFrame.h  GamePanel.cpp  GamePanel.h
